# api

./: .gitattributes  .gitignore  Cargo.toml
.devcontainer/: .env  Dockerfile  devcontainer.json  docker-compose.yml
crates/db/: Cargo.toml  Dockerfile  build.rs  schema.sql
crates/db/migrations/: 20240908001602_organization_table.sql  20240908182139_user_and_basic_auth_table.sql  20240908182139_user_related_tables.sql  20240909015359_enable_fuzzystrmatch.sql  20240909025555_group_related_tables.sql  20240909230054_repository_related_tables.sql  20240910015829_artifact_related_tables.sql
crates/db/queries/: organizations.sql  users.sql
crates/db/src/: lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: config.rs  entities.rs  error.rs  http.rs  lib.rs  main.rs  models.rs  repositories.rs  services.rs  utils.rs
crates/web-server/src/apps/: axum_server.rs
crates/web-server/src/entities/: artifact.rs  artifact_storage.rs  group.rs  organization.rs  repository.rs  user.rs
crates/web-server/src/repositories/: base.rs  postgresql.rs
crates/web-server/src/services/: base.rs  web.rs
crates/web-server/src/utils/: pagination.rs  slug.rs
