[package]
name = "package-pro-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", default-features = false, features = ["json", "http1", "tokio"] }
tokio = { version = "1", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
db = { path = "../db" }
uuid = "1.10.0"
argon2 = "0.5.3"
chrono = "0.4.38"
thiserror = "1.0.64"

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-C", "link-arg=--ld-path=/usr/bin/mold"]
